    - a newline bug fixed in profiler.php
    - fixed auto_source_url variable bug in Config.php
    

- added public_folder item to config.php
- added _get_public_path() function to common.php file, updated head_tag and body_tag helper.  
- updated Config.php and url helper public_url() function.
    
//-----------------------------------------------------------------------------


@todolist 
- css functionality from modules  change it css();
- configuration for modules.
- output cache folder for each modules.
- those 3 things. css/js checking modules first, bug in printing out blank link and folders in controllers 
- check routes functionality for subfolders ..
- restful http call hmvc, post, put, delete, get
- test router and add router changes to hmvc.
- add GET method support to subfolder urls.
- add module library extend support, helper extend, model extend (in module directory !!)
- view nested data support
- this() function should be in current hmvc SCOPE. ( fixed.)
- hmvc cache test. ( fixed )


!!!!!!!!!!!!!!!!!!! NEW TODOS !!!!!!!!!!!!!!!
@todo .. multiple database active ercord.
@todo .. look log_message(); some functions does not work.
@todo .. add user guide to extending to Core MY_model functionality.
it works in Obullo !
http://www.askaboutphp.com/50/codeigniter-extending-the-native-model-and-make-it-your-own.html 

@todo .. change htaccess rules in userguide DirectoryIndex index.php, index.html
@todo .. add htaccess rules for ngnix server
@todo .. put archived doc meta tag to old user guide base layout ..
@todo .. change obullo mvc2 names as Obullo GC in web site.            
@todo .. change mvc2 map as GC in userguide                                   


NEXT VERSION
----------------------------------------------------------------

MONGO DB API ( loader::nosql('mongodb'); )
http://devzone.zend.com/article/12132-Getting-Started-with-MongoDB-and-PHP
http://lithify.me/en/docs/lithium/data/source/MongoDb
