@@ -6,7 +6,8 @@ The goal of Obullo is keep the Core minimal via less coding.
 ## Features
 
 - Global Controllers (Obullo GC)
-- Advanced Directory Structure
+- HMVC (Hierarchical Model View Controller)
+- Advanced Directory Structure and Sub folders
 - PDO with Active Record Class
 - Orginally based CodeIgniter
 - Lightweight and Easy to Use.
